[gd_scene load_steps=3 format=3 uid="uid://bq8dpascomfv3"]

[ext_resource type="Script" uid="uid://bbf45s3q8558f" path="res://src/main/options_menu.gd" id="1_4ygv0"]
[ext_resource type="Theme" uid="uid://b25e8xy3plsn6" path="res://resources/theme/desktop_theme.tres" id="1_gs7yn"]

[node name="OptionsMenu" type="PanelContainer" node_paths=PackedStringArray("hard_mode", "cheats", "volume_slider", "music_vol_slider", "sound_vol_slider")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gs7yn")
script = ExtResource("1_4ygv0")
hard_mode = NodePath("ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/HardModeCheck")
cheats = NodePath("ScrollContainer/MarginContainer/VBoxContainer/Cheats/CheatsCheck")
volume_slider = NodePath("ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/MasterVolSlider")
music_vol_slider = NodePath("ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer3/MusicVolSlider")
sound_vol_slider = NodePath("ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer4/SoundVolSlider")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Master Volume"

[node name="MasterVolSlider" type="HSlider" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[node name="HBoxContainer4" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Sound Volume"

[node name="SoundVolSlider" type="HSlider" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hard Mode"

[node name="HardModeCheck" type="CheckButton" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Cheats" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/Cheats"]
layout_mode = 2
size_flags_horizontal = 3
text = "Enable Cheats (in Shop)"

[node name="CheatsCheck" type="CheckButton" parent="ScrollContainer/MarginContainer/VBoxContainer/Cheats"]
layout_mode = 2

[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer2/MasterVolSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer3/MusicVolSlider" to="." method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer4/SoundVolSlider" to="." method="_on_sound_vol_slider_value_changed"]
[connection signal="toggled" from="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/HardModeCheck" to="." method="_on_hard_mode_check_toggled"]
[connection signal="toggled" from="ScrollContainer/MarginContainer/VBoxContainer/Cheats/CheatsCheck" to="." method="_on_cheats_check_toggled"]
